--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=940" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
@@ -33,14 +33,14 @@
           <p class="text-hero">An award-winning construction management firm</p>
         </div>
 
-        <a href="" class="scroll-link">SCROLL DOWN</a>
+        <a href="#story" class="scroll-link">SCROLL DOWN</a>
       </div>
     </section>
 
     <header class="section-header header">
       <div class="container">
         <nav class="header-nav">
-          <a href="">
+          <a href="" class="logo-link-header">
             <svg width="79" height="18">
               <use href="./images/icons.svg#icon-logo-1"></use>
             </svg>
@@ -57,22 +57,267 @@
     </header>
 
     <main>
-      <section>
-        <h2 class="title-section-story">OUR STORY</h2>
+      <section class="section-story">
+        <div class="container">
+          <h2 class="title-section-story" id="story">OUR STORY</h2>
 
-        <div class="container-left-content">
-          <h3 class="title-left-content">
-            Founded in 2011 by John Mathew Smith, Konstruct has become the
-            number one construction management firm
-          </h3>
-          <p class="text-story-left">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
-            nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.
+          <div class="container-all-content-story">
+            <div class="container-left-content">
+              <h3 class="title-left-content">
+                Founded in 2011 by John Mathew Smith, Konstruct has become the
+                number one construction management firm
+              </h3>
+              <p class="text-story-left">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                aliquam erat. Lorem ipsum dolor sit amet, consectetuer
+                adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                laoreet dolore magna aliquam erat.
+              </p>
+            </div>
+
+            <div class="container-right-content">
+              <ul class="img-right-content">
+                <li>
+                  <a href="" class="img-right-content-link">
+                    <img
+                      class="img-story"
+                      srcset="./images/images-img/we-build@2x.jpg 2x"
+                      src="./images/images-img/we-build.jpg"
+                      alt="we build"
+                    />
+
+                    <p class="content-in-img">We Plan</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="img-right-content-link">
+                    <img
+                      class="img-story"
+                      srcset="./images/images-img/we-manage@2x.jpg 2x"
+                      src="./images/images-img/we-manage.jpg"
+                      alt="we manage"
+                    />
+                    <p class="content-in-img">We manage</p>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="img-right-content-link">
+                    <img
+                      class="img-story"
+                      srcset="./images/images-img/we-plan@2x.jpg 2x"
+                      src="./images/images-img/we-plan.jpg"
+                      alt="we plan"
+                    />
+                    <p class="content-in-img">We build</p>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-capabilities">
+        <div class="container">
+          <div class="container-capabilities-header">
+            <h2 class="title-capabilities">OUR CAPABILITIES</h2>
+            <div class="wrap-header-capabilitie">
+              <p class="text-capabilities">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                aliquam erat.
+              </p>
+              <a href="#" class="link-capabilities">ALL SERVICES</a>
+            </div>
+          </div>
+
+          <ul class="card-list">
+            <li class="card-item">
+              <svg width="66" height="75" class="icon-card">
+                <use href="./images/icons.svg#icon-newspaper"></use>
+              </svg>
+
+              <h2 class="title-card">STRUCTURE AUDIT AND MAINTENANCE</h2>
+              <p class="text-card">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                aliquam erat.
+              </p>
+            </li>
+            <li class="card-item">
+              <svg width="66" height="75" class="icon-card">
+                <use href="./images/icons.svg#icon-books"></use>
+              </svg>
+
+              <h2 class="title-card">FACTORY CONSTRUCTION AND MODELING</h2>
+              <p class="text-card">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                aliquam erat.
+              </p>
+            </li>
+
+            <li class="card-item">
+              <svg width="66" height="75" class="icon-card">
+                <use href="./images/icons.svg#icon-office"></use>
+              </svg>
+
+              <h2 class="title-card">PROJECT AND CONSTRUCTION MANAGEMENT</h2>
+              <p class="text-card">
+                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+                diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                aliquam erat.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section-build">
+        <div class="container">
+          <h2 class="title-build">Want to build something amazing?</h2>
+          <a href="#" class="link-capabilities link-capabilities-mrg"
+            >GET IN TOUCH</a
+          >
+        </div>
+      </section>
+
+      <section class="section-form">
+        <div class="container container-form-content">
+          <p class="form-text">Newsletter signup</p>
+          <div class="wrap-form">
+            <input
+              type="email"
+              name="email"
+              required
+              class="form-input"
+              placeholder="test@youremail.com"
+            />
+            <button type="submit" class="form-btn-submit">Signup</button>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="section-footer">
+      <div class="container container-footer">
+        <div class="wrap-block-footer">
+          <p class="title-footer footer-mrg-text">Company</p>
+          <a href="#" class="logo-link">
+            <svg width="102" height="23" class="logo-svg">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
+
+          <p class="text-footer">
             Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
             nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.
           </p>
         </div>
-      </section>
-    </main>
+
+        <div class="second-wrap-block-footer">
+          <p class="title-footer">Links</p>
+          <ul class="footer-nav-list">
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">HOME</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">ABOUT</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">SERVICES</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">WORK</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="third-wrap-block-footer">
+          <ul class="faq-list">
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">Faq</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">Terms</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">Careers</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="third-wrap-block-footer">
+          <ul class="faq-list">
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">Blog</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">Partners</a>
+            </li>
+            <li class="footer-nav-item">
+              <a href="" class="footer-nav-link">News</a>
+            </li>
+          </ul>
+        </div>
+
+        <address class="address-fotter">
+          <p class="title-footer">Contact us</p>
+          <ul class="contact-list">
+            <li class="footer-contact-item">
+              <a href="#" class="contact-link location-link"
+                >213 Baker Street Oriel City Kounty 7000 KNW, Kountry Name</a
+              >
+            </li>
+            <li class="footer-contact-item">
+              <a href="tel:239942334022" class="contact-link"
+                >+23 994 233 4022</a
+              >
+            </li>
+            <li class="footer-contact-item">
+              <a href="mailto:info@konstruct.com" class="contact-link mail-link"
+                >info@konstruct.com</a
+              >
+            </li>
+          </ul>
+        </address>
+
+        <div class="wrap-icons-social-media">
+          <ul class="social-media-list">
+            <li>
+              <a href="" class="social-media-link">
+                <svg width="12" height="12" class="svg-social-media">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="social-media-link">
+                <svg width="12" height="12" class="svg-social-media">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="" class="social-media-link">
+                <svg width="12" height="12" class="svg-social-media">
+                  <use href="./images/icons.svg#icon-google"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="policy">
+        <p class="policy-text">
+          © 2017 Konstruct Inc. Designed by Jane Kathryn Teo
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
