--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <title>Konstruct</title>
   </head>
   <body>
     <section class="section-hero hero">
