--- a/index.html
+++ b/index.html
@@ -81,10 +81,12 @@
                 <li>
                   <a href="" class="img-right-content-link">
                     <picture>
-                      <source srcset="./images/images-img/we-plan@2x.jpg 2x" />
+                      <source srcset="./images/images-img/we-plan@2x.jpg 2x" 
+                        type="image/jpg"
+                       />
                       <source
                         srcset="we-plan.webp 1x, we-plan.webp@2x 2x"
-                        type="webp"
+                        type="image/webp"
                       />
                       <img
                         class="img-story"
@@ -101,10 +103,11 @@
                     <picture>
                       <source
                         srcset="./images/images-img/we-manage@2x.jpg 2x"
+                        type="image/jpg"
                       />
                       <source
                         srcset="we-manage.webp 1x, we-manage.webp@2x 2x"
-                        type="webp"
+                        type="image/webp"
                       />
                       <img
                         class="img-story"
@@ -118,10 +121,12 @@
                 <li>
                   <a href="" class="img-right-content-link">
                     <picture>
-                      <source srcset="./images/images-img/we-build@2x.jpg 2x" />
+                      <source srcset="./images/images-img/we-build@2x.jpg 2x" 
+                      type="image/jpg"
+                       />
                       <source
                         srcset="we-build.webp 1x, we-build.webp@2x 2x"
-                        type="webp"
+                        type="image/webp"
                       />
                       <img
                         class="img-story"
