--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           </a>
           <ul class="header-nav-list">
             <li><a href="" class="nav-link">HOME</a></li>
-            <li><a href="" class="nav-link current">ABOUT</a></li>
-            <li><a href="" class="nav-link">SERVICES</a></li>
-            <li><a href="" class="nav-link">WORK</a></li>
-            <li><a href="" class="nav-link">CONTACT</a></li>
+            <li><a href="#about" class="nav-link current">ABOUT</a></li>
+            <li><a href="#services" class="nav-link">SERVICES</a></li>
+            <li><a href="#work" class="nav-link">WORK</a></li>
+            <li><a href="#contact" class="nav-link">CONTACT</a></li>
           </ul>
         </nav>
       </div>
@@ -139,7 +139,7 @@
         </div>
       </section>
 
-      <section class="section-capabilities">
+      <section class="section-capabilities" id="services">
         <div class="container">
           <div class="container-capabilities-header">
             <h2 class="title-capabilities">OUR CAPABILITIES</h2>
@@ -195,7 +195,7 @@
         </div>
       </section>
 
-      <section class="section-build">
+      <section class="section-build" id="work">
         <div class="container">
           <h2 class="title-build">Want to build something amazing?</h2>
           <a href="#" class="link-capabilities link-capabilities-mrg"
@@ -221,7 +221,7 @@
       </section>
     </main>
 
-    <footer class="section-footer">
+    <footer class="section-footer" id="contact">
       <div class="container container-footer">
         <div class="wrap-block-footer">
           <p class="title-footer footer-mrg-text">Company</p>
